--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.6.0",
     "nodemon": "^3.0.1",
-    "pg": "^8.11.3",
-    "sequelize": "^6.32.1"
+    "pg": "^8.11.3"
+  },
+  "devDependencies": {
+    "sequelize": "^6.32.1",
+    "sequelize-cli": "^6.6.1"
   }
 }
